[package]
name = "advanced-discount"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
mongodb = { version = "3.2.3" }
bson = { version = "2.8", features = ["chrono-0_4", "serde_with"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
tarpc = { version = "0.34", features = ["full"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1"
